--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,6 @@
 layout: layouts/base.njk
 ---
 
-<div class="w-1/2 p-8 shadow bg-white">
-  <h1 class="text-4xl">Lush Mouthfeel</h1>
+<div class="w-full m-8 p-8 shadow-lg bg-white rounded-lg font-serif text-center">
+  <h1 class="text-3xl">Lush Mouthfeel</h1>
 </div>
