--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,8 @@ layout: layouts/base.njk
 ---
 
 <div class="w-full m-8 p-8 shadow-lg bg-white rounded-lg font-serif text-center">
-  <h1 class="text-3xl">Lush Mouthfeel</h1>
+  <h1 class="text-3xl text-gray-700">Lush Mouthfeel</h1>
+  <h2 class="text-2xl my-8" id="text"></h2>
+
+  <button onClick="js:generatePhrase()" class="font-sans px-8 py-2 bg-green-400 text-white">Try Again</button>
 </div>
