:heavy_plus_sign: Use epures to improve text

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 layout: layouts/base.njk
 ---
 
-<div class="w-full m-8 p-8 shadow-lg bg-white rounded-lg font-serif text-center">
-  <h1 class="text-3xl text-gray-700">Lush Mouthfeel</h1>
-  <h2 class="text-2xl my-8" id="text"></h2>
-
-  <button onClick="js:generatePhrase()" class="font-sans px-8 py-2 bg-green-400 text-white">Try Again</button>
+<div
+  class="flex-grow m-8 flex flex-col justify-center items-center font-serif px-8 py-16 shadow-lg bg-white rounded-lg max-w-4xl">
+  <h2 class="text-3xl mb-8 text-center" id="text"></h2>
+  <button onClick="js:generatePhrase()" class="text-gray-700 hover:underline">Try Again</button>
 </div>
